--- a/src/components/static-box/StaticBox.css
+++ b/src/components/static-box/StaticBox.css
@@ -8,7 +8,7 @@
     width: 40%;
     height: auto;
     top:0;
-    z-index: 100;
+    z-index: 0;
 }
 
 .static-heading{
